Fix bug on Safari and Refactoring
Fix height menu-item bug on Safari where device-width 900px and less.

--- a/menu.scss
+++ b/menu.scss
@@ -2,11 +2,8 @@
 
 .container{
 	max-width: 1200px;
-	flex: 1 1 1200px;
 	margin: 0 auto;
-	margin: 0 15px;
 	@media screen and (max-width: 992px) {
-		flex: 1 1 100%;
 		margin: 0 15px;
 	}
 }
@@ -20,31 +17,26 @@ body{
 // Меню
 
 .menu{
-	display: flex; position: relative;
+	position: relative;
 	
 	width: 100%;
 	background-color: #222;
 }
 .menu__container{
-	margin: 0 auto;
-	
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
-	
-	width: 100%;
-	padding: 0 15px;
+	padding: 0;
+	margin: 0;
 	
 	@media screen and (max-width: 992px) {
 		flex-direction: column;
-		padding: 0;
 	}
 }
 .menu__item{
 	display: flex;
 	flex-direction: column;
-	flex: 1 1 20%;
 
 	padding: 0;
 	
@@ -62,7 +54,7 @@ body{
 	};
 
 	&:hover{ background-color: #333; };
-	&:hover>.menu__sub-menu{ height: auto; opacity: 1; z-index: 10;};
+	&:hover>.menu__sub-menu{height: auto; opacity: 1; z-index: 10;};
 	
 	@media screen and (max-width: 992px) {
 		width: 100%;
@@ -70,12 +62,13 @@ body{
 	}
 }
 .menu__sub-menu{
-	top: 56px;
+	top: 58px;
 	left: 0;
-	
 	position: absolute;  
-	opacity: .9; z-index: 0;
-	box-sizing: border-box; overflow: hidden; 
+	box-sizing: border-box; 
+	overflow: hidden;
+	opacity: .9;
+	z-index: 0;
 	
 	height: 0;
 	width: 100%;
@@ -91,7 +84,6 @@ body{
 	flex-wrap: wrap;
 	justify-content: space-between;
 	
-	margin: 0 auto;
 	padding: 15px;
 }
 .menu__sub-item{
